--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,6 @@ body {
   user-select: none;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
-  touch-action: manipulation;
 }
 
 input,
